2.0.124 (2024-01-28)

- Fixed Vision checkbox visibility when switching to plain-text mode
- Added RMB context menu option "Save as..." to selected text for saving selected text (or whole document) to a text file

2.0.123 (2024-01-27)

- Standarized models names
- Added "Recursive directory indexing" option in "Settings / Indexes (Llama-index)" (default: False)

2.0.122 (2024-01-27)

- Added new OpenAI model released on 2024-01-25: "gpt-4-0125-preview"
- Added ability to add custom offline data loaders for Llama-index
- Improved debugging and logging, added debug levels, and introduced a new section "Debugging and Logging" in the documentation
- Moved inline styles to external CSS classes
- Renamed "pygpt_net.provider.llm" to "pygpt_net.provider.llms"

2.0.121 (2024-01-27)

- Fixed query error when using Query mode in Chat with files mode with enabled plugins
- Added a bridge/abstraction layer between modes
- Hid the assistant checkbox in the preset editor

2.0.120 (2024-01-26)

- Fixed font-size restore when switching between plain text and markdown renderer
- Added RMB context menu option "Clear files" to input Attachments tab.

2.0.119 (2024-01-25)

- Fixed list selection loose after async command execution
- Added "Start minimized" option in settings
- Updated docs

2.0.118 (2024-01-25)

- Added "Show tray icon" option in "Settings"
- Added launcher arguments
- Updated docs
- Small fixes

2.0.117 (2024-01-24)

- Added a new feature to the "Command: Files I/O" plugin - "Get and upload file as attachment". It lets automatically read files from "data" folder and send them as attachments - just ask to send a file as an attachment and the model will send it to itself (like sending an image for analysis). Option is disabled by default in the plugin"s settings.
- Added a new plugin: "Command: Serial port / USB". This plugin lets you read and send any commands to USB ports (so you can control robots now ;) ).