@@ -2,6 +2,7 @@
 
 - Fixed Vision checkbox visibility when switching to plain-text mode
 - Added RMB context menu option "Save as..." to selected text for saving selected text (or whole document) to a text file
+- Added remembering the last used directory for uploading attachments/saving files
 
 2.0.123 (2024-01-27)
 
